Fixes on mobile, width 100% and no unneccesary scrolling

--- a/src/Global-Components/Navbar/components/MenuMobile/styles.module.scss
+++ b/src/Global-Components/Navbar/components/MenuMobile/styles.module.scss
@@ -3,7 +3,7 @@
 @media (max-width: ($desktop - 1)) {
   .menuActive {
     position: fixed;
-    bottom: 0;
+    top: 80px;
     left: 0;
     width: 100vw;
     height: calc(100vh - 80px);
