--- a/src/Views/Home/Components/Main/styles.module.scss
+++ b/src/Views/Home/Components/Main/styles.module.scss
@@ -16,6 +16,7 @@
 
   .battle {
     background-image: url("../../../../Assets/img/Bg-Home.png");
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -132,6 +133,7 @@
 
   .battle {
     background-image: url("../../../../Assets/img/Bg-Home.png");
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -250,6 +252,7 @@
 
   .battle {
     background-image: url("../../../../Assets/img/Bg-Home.png");
+    background-position: center;
     display: flex;
     padding-left: 30px;
     padding-top: 65px;
